--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,104 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  flex: auto;
+}
+
+.galery-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.galery-image {
+  width: 320px;
+  height: 320px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.home-image {
+  border-radius: 80%;
+  border-style:groove;
+}
+
+.home-gallery {
+  background-color: #8990f421;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding: 1rem;
+}
+
+.despre {
+  background-color: rgba(133, 97, 6, 0.279);
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: rgb(103, 104, 73);
+  font-size: 1.6rem;
+  margin: 1rem;
+  width: 100%; 
+}
+
+.img-despre{
+  width:45%;
+  margin-left: 25%;
+  height: 15rem;
+  
+}
+
+.text-gallery{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.5rem;
+  color: rgb(121, 64, 11);
+
+}
+.despre-icons {
+  display: flex;
+  justify-content:space-around;
+  justify-items: center;
+  
+}
+.despre-text {
+  display: flex;
+  font-size: 3rem;
+  justify-content: center;
+  color: brown;
+}
+
+.form-text{
+ font-size: 2rem;
+ font-weight:bold;
+ display: flex;
+ font-weight: bold;
+ justify-content: center;
+ color: rgb(37, 24, 19);
+}
+
+/* .form-container {
+
+}  */
+
+.mb-3{
+  font-size: 1.2rem;
+  color: rgb(37, 24, 19);
+  font-weight: bold;
+  width: 500px;
+}
+
+
+
+.contact-container {
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 1.6rem;
+display: flex;
+align-items: center;
+padding-left:5rem;
+color: rgb(104, 155, 16);
 }
