--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   height: 100vh;
 }
 
+#root {
+  height: 100%;
+}
+
 main {
   flex: auto;
 }
@@ -59,12 +63,11 @@ main {
   color: rgb(121, 64, 11);
 
 }
-.despre-icons {
+.despre-icons{
   display: flex;
-  justify-content:space-around;
-  justify-items: center;
-  
+   flex-direction: column;
 }
+
 .despre-text {
   display: flex;
   font-size: 3rem;
@@ -101,4 +104,14 @@ display: flex;
 align-items: center;
 padding-left:5rem;
 color: rgb(104, 155, 16);
+}
+
+.booking-form {
+  background-color: rgba(0, 0, 0, 0.334);
+  width: fit-content;
+  padding: 0.5rem;
+}
+
+.booking-form label {
+  color: white;
 }
